--- a/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio01/Ejercicio01.html
+++ b/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio01/Ejercicio01.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="HojaDeEstilo01.css">
 </head>
 <body>
-    <form action="#" method="post">
+    <form action="" name="Registro" method="">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" required>
         <br/><br/>
