Corregido el tipo examen y añadido el ejercicio 4

--- a/Visual Studio Projects/Unidad 6/Ejercicio Tipo Examen/Ejercicio v2.html
+++ b/Visual Studio Projects/Unidad 6/Ejercicio Tipo Examen/Ejercicio v2.html
@@ -98,8 +98,12 @@
 			border: 1px solid yellow;
 		}
 
-		col:first-child{
-			width: 50%;
+		th:first-child, td:first-child {
+			width: 55%;
+		}
+
+		th:not(:first-child), td:not(:first-child) {
+			width: 15%;
 		}
 		
 		tfoot{
