--- a/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio03/Ejercicio03.html
+++ b/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio03/Ejercicio03.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Ejercicio 3 - Formulario de alta</title>
+	<title>Ejercicio 3</title>
 	<link rel="stylesheet" href="HojaDeEstilo03.css">
 </head>
 <body>
