--- a/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio04/Ejercicio04.html
+++ b/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio04/Ejercicio04.html
@@ -13,7 +13,7 @@
 		<fieldset> 
 			<label class="titulo" for="nombre">Nombre y apellidos <span class="requerido">*</span></label> 
 			<div> 
-				<input class="dif" id="nombre" name="nombre" value="" size="50%"/> 
+				<input class="dif" id="nombre" name="nombre" value="" size="50"/> 
 				<label for="nombre">Nombre</label> 
 
 				<input id="apellido1" name="apellido1" value="" /> 
@@ -30,27 +30,38 @@
 				<input id="direccion" name="direccion" value="" /> 
 				<label for="direccion">Calle, número, piso, puerta</label> 
 			
-				<input id="codigopostal" name="codigopostal" value="" /> 
-				<label for="codigopostal">Código postal</label> 
-			
-				<input id="municipio" name="municipio" value="" /> 
-				<label for="municipio">Municipio</label> 
-			
-				<select id="provincia" name="provincia"> 
-					<option value=""></option> 
-					<option value="provincia1">Provincia 1</option> 
-					<option value="provincia2">Provincia 2</option> 
-					<option value="provincia3">Provincia 3</option> 
-				</select> 
-				<label for="provincia">Provincia</label> 
-			
-				<select id="pais" name="pais"> 
-					<option value=""></option> 
-					<option value="pais1">País 1</option> 
-					<option value="pais2">País 2</option> 
-					<option value="pais3">País 3</option> 
-				</select> 
-				<label for="pais">País</label> 		
+				<div class="row">
+					<div class="col">
+						<input class="dif" id="codigopostal" name="codigopostal" value="">
+						<label for="codigopostal">Código postal</label>
+					</div>
+					
+					<div class="col">
+						<input id="municipio" name="municipio" value="">
+						<label for="municipio">Municipio</label>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col">
+						<select class="dif" id="provincia" name="provincia">
+							<option value=""></option>
+							<option value="provincia1">Provincia 1</option>
+							<option value="provincia2">Provincia 2</option>
+							<option value="provincia3">Provincia 3</option>
+						</select>
+						<label for="provincia">Provincia</label>
+					</div>
+
+					<div class="col">
+						<select id="pais" name="pais">
+							<option value=""></option>
+							<option value="pais1">País 1</option>
+							<option value="pais2">País 2</option>
+							<option value="pais3">País 3</option>
+						</select>
+						<label for="pais">País</label>
+					</div>
+				</div>	
 			</div> 
 			<p class="ayuda">El código postal es imprescindible para poder recibir los pedidos</p> 	
 			
@@ -64,13 +75,18 @@
 		</fieldset> 
 		<fieldset> 
 			<label class="titulo" for="telefonofijo">Teléfono <span class="requerido">*</span></label> 
-			<div> 				
-				<input id="telefonofijo" name="telefonofijo" value="" /> 
-				<label for="telefonofijo">Fijo</label> 
 			
-				<input id="telefonomovil" name="telefonomovil" value="" /> 
-				<label for="telefonomovil">Móvil</label> 			
-			</div> 
+			<div class="row">
+				<div class="col">
+					<input id="telefonofijo" name="telefonofijo" value="">
+					<label for="telefonofijo">Fijo</label>
+				</div>
+
+				<div class="col">
+					<input id="telefonomovil" name="telefonomovil" value="">
+					<label for="telefonomovil">Móvil</label>
+				</div>
+			</div>
 			<p class="ayuda">Sin prefijo de país y sin espacios en blanco</p> 
 			
 		</fieldset> 
