Terminado el boletin 6.2

--- a/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio01/Ejercicio01.html
+++ b/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio01/Ejercicio01.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio01</title>
-    <link rel="stylesheet" href="HojaDeEstilo01.css">
+    <link rel="stylesheet" type="text/css" href="HojaDeEstilo01.css">
 </head>
 <body>
     <form action="" name="Registro" method="">
