--- a/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio03/Ejercicio03.html
+++ b/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio03/Ejercicio03.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ejercicio 3</title>
-	<link rel="stylesheet" href="HojaDeEstilo03.css">
+	<link rel="stylesheet" type="text/css" href="HojaDeEstilo03.css">
 </head>
 <body>
 <main>
