--- a/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio05/Ejercicio05.html
+++ b/Visual Studio Projects/Unidad 6/Serrano Ruiz Mauro UD6.2/Ejercicio05/Ejercicio05.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio05</title>
-    <link rel="stylesheet" href="HojaDeEstilo05.css">
+    <link rel="stylesheet" type="text/css" href="HojaDeEstilo05.css">
 </head>
 <body>
     <main>
