Avanzado el proyecto bootstrap

--- a/Visual Studio Projects/Unidad 7/EjemploBootstrap.html
+++ b/Visual Studio Projects/Unidad 7/EjemploBootstrap.html
@@ -8,7 +8,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+    <header class="container">
         <h1 class="display-1 text-bg-success">Titulo</h1>
     </header>
     <main>
@@ -20,5 +20,12 @@
         <p>Esta es una quinta línea de texto.</p>
         <p>Esta es una sexta línea de texto.</p>
     </main>
+    <footer class="container text-center text-bg-dark text-white">
+        <div class="row">
+            <p class="col-12 col-md-6 col-lg">Contacto</p>
+            <p class="col-12 col-md-6 col-lg-6">Aviso Legal</p>
+            <p class="col-12 col-md-6 col-lg">Cookies</p>
+        </div>
+    </footer>
 </body>
 </html>
