--- a/Visual Studio Projects/Unidad 7/SerranoRuizMauro/Portada/inicio-web.html
+++ b/Visual Studio Projects/Unidad 7/SerranoRuizMauro/Portada/inicio-web.html
@@ -3,15 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portada</title>
+    <title>Tuneo Total - Web Oficial</title>
+    <meta name="description" content="El portal definitivo para apasionados del motor. Noticias, exposiciones, competiciones y análisis técnico del mundo automovilístico.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="../HojaDeEstilo.css">
+    <style>
+        .hero-card {
+            background-color: rgba(0, 0, 0, 0.7);
+            border: none;
+            border-radius: 10px;
+        }
+        .hero-title {
+            font-size: 2.5rem;
+            font-weight: 700;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+        .hero-text {
+            font-size: 1.2rem;
+            line-height: 1.6;
+        }
+    </style>
 </head>
 <body>
     <header>
         <div class="container-fluid p-0">
-            <img src="../RecursosGenerales/Imagenes/Banner_Web.png" class="img-fluid w-100" alt="banner">
+            <img src="../RecursosGenerales/Imagenes/Banner_Web.png" class="img-fluid w-100" alt="Banner Automotor Passion - Competición y tecnología automovilística">
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-black">
@@ -22,16 +39,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav w-100 justify-content-between">
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="../Portada/inicio-web.html" target="_self" title="EnlaceMenuHorizontal">Portada</a>
+                            <a class="nav-link text-white" href="../Portada/inicio-web.html" target="_self" title="Página principal de Automotor Passion">Portada</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="../Tienda/tienda.html" target="_self" title="EnlaceMenuHorizontal">Tienda</a>
+                            <a class="nav-link text-white" href="../Tienda/tienda.html" target="_self" title="Tienda oficial de productos automovilísticos">Tienda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="../CarruselExposicion/CarruselExposicion1.html" target="_self" title="EnlaceMenuHorizontal">Exposición de Vehículos</a>
+                            <a class="nav-link text-white" href="../CarruselExposicion/CarruselExposicion1.html" target="_self" title="Exposición de vehículos clásicos y modernos">Exposición de Vehículos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="../Blog/Blog.html" target="_self" title="EnlaceMenuHorizontal">Blog</a>
+                            <a class="nav-link text-white" href="../Blog/Blog.html" target="_self" title="Blog especializado en automoción">Blog</a>
                         </li>
                     </ul>
                 </div>
@@ -40,9 +57,35 @@
     </header>
 
     <main class="container my-5">
-        <div class="text-center">
-            <a href="../Blog/Blog.html" class="imagen">
-                <img src="../Portada/Recursos/Imagenes/Inicio_Web.png" class="img-fluid rounded" alt="ImagenPortada">
+        <div class="text-center mb-4">
+            <a href="#" class="portada">
+                <img src="../Portada/Recursos/Imagenes/Inicio_Web.png" class="img-fluid rounded shadow-lg" alt="Imagen destacada: Lo último en tecnología automovilística">
+            </a>
+        </div>
+        <div class="container my-5">
+            <a href="#" class="portada text-white">
+                <div class="bg-dark rounded py-4 px-3">
+                    <h1 class="mb-4 text-center">BIENVENIDOS A TUNEO TOTAL</h1>
+                    <p class="mb-4">
+                        En <span class="fw-bold">Tuneo Total</span> vivimos por y para el mundo del motor. Desde 2024, nos hemos consolidado como el referente en información automovilística en español, ofreciendo cobertura exclusiva de competiciones internacionales, análisis técnicos profundos y las últimas novedades de la industria. Nuestro compromiso es acercarte al apasionante universo del automovilismo, ya seas un fanático de las carreras, un amante de los coches clásicos o un entusiasta de la tecnología de vanguardia. Con una comunidad en constante crecimiento, trabajamos para brindarte contenido de calidad, entrevistas exclusivas con expertos y acceso a eventos únicos que celebran la pasión por los motores. Únete a nosotros y descubre todo lo que el mundo del motor tiene para ofrecer.
+                    </p>
+                    <p class="mb-4">
+                        Nuestro equipo de expertos, formado por ingenieros, pilotos y periodistas especializados, te trae contenido de calidad sobre:
+                    </p>
+                    <div class="row justify-content-center">
+                        <div class="col-md-8">
+                            <ul class="text-start">
+                                <li class="mb-2">Competiciones nacionales e internacionales (F1, WRC, Drift, GT, etc.)</li>
+                                <li class="mb-2">Lanzamientos de nuevos modelos y tecnología innovadora</li>
+                                <li class="mb-2">Eventos exclusivos y exposiciones de vehículos</li>
+                                <li class="mb-2">Guías de mantenimiento y consejos para entusiastas</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <p class="mt-4 text-center">
+                        <span class="fst-italic">"No somos simples espectadores, somos parte activa de la comunidad automovilística."</span> - Equipo de Tuneo Total
+                    </p>
+                </div>
             </a>
         </div>
     </main>
@@ -51,45 +94,45 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-4 mb-md-0">
-                    <h2>Sobre nosotros</h2>
+                    <h2 class="h4">Sobre nosotros</h2>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="#" class="text-white">Conócenos</a></li>
-                        <li class="mb-2"><a href="#" class="text-white">Ayuda</a></li>
-                        <li class="mb-2"><a href="#" class="text-white">Información esencial</a></li>
+                        <li class="mb-2"><a href="/Portada/inicio-web.html" class="text-white text-decoration-none">Conócenos</a></li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Nuestro equipo</a></li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Contacto</a></li>
                     </ul>
                 </div>
 
                 <div class="col-md-4 mb-4 mb-md-0">
-                    <h2>Legal</h2>
+                    <h2 class="h4">Legal</h2>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="#" class="text-white">Aviso legal</a></li>
-                        <li class="mb-2"><a href="#" class="text-white">Política de privacidad</a></li>
-                        <li class="mb-2"><a href="#" class="text-white">Política de Cookies</a></li>
-                        <li class="mb-2"><a href="#" class="text-white">Condiciones de uso</a></li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Aviso legal</a></li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Política de privacidad</a></li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Política de Cookies</a></li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Condiciones de uso</a></li>
                     </ul>
                 </div>
 
                 <div class="col-md-4">
-                    <h2>Redes sociales</h2>
+                    <h2 class="h4">Redes Sociales</h2>
                     <ul class="list-unstyled">
                         <li class="mb-2">
-                            <a href="#" class="text-white">
-                                <img src="../RecursosGenerales/Imagenes/Icono_Facebook.png" alt="Facebook" class="me-2 social" width="20"> Facebook
+                            <a href="#" class="text-white text-decoration-none">
+                                <img src="../RecursosGenerales/Imagenes/Icono_Facebook.png" alt="Síguenos en Facebook" class="me-2" width="20"> Facebook
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="#" class="text-white">
-                                <img src="../RecursosGenerales/Imagenes/Icono_Instagram.png" alt="Instagram" class="me-2 social" width="20"> Instagram
+                            <a href="#" class="text-white text-decoration-none">
+                                <img src="../RecursosGenerales/Imagenes/Icono_Instagram.png" alt="Síguenos en Instagram" class="me-2" width="20"> Instagram
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="#" class="text-white">
-                                <img src="../RecursosGenerales/Imagenes/Icono_Twitter.png" alt="Twitter" class="me-2 social" width="20"> Twitter
+                            <a href="#" class="text-white text-decoration-none">
+                                <img src="../RecursosGenerales/Imagenes/Icono_Twitter.png" alt="Síguenos en Twitter" class="me-2" width="20"> Twitter
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a href="#" class="text-white">
-                                <img src="../RecursosGenerales/Imagenes/Icono_Tiktok.png" alt="Tiktok" class="me-2 social" width="20"> Tiktok
+                            <a href="#" class="text-white text-decoration-none">
+                                <img src="../RecursosGenerales/Imagenes/Icono_Tiktok.png" alt="Síguenos en TikTok" class="me-2" width="20"> TikTok
                             </a>
                         </li>
                     </ul>
