Terminada la portada, el blog y el carrusel de imagenes (deberian revisarse)

--- a/Visual Studio Projects/Unidad 7/SerranoRuizMauro/Portada/inicio-web.html
+++ b/Visual Studio Projects/Unidad 7/SerranoRuizMauro/Portada/inicio-web.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,6 +26,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <div class="container-fluid p-0">
@@ -57,36 +59,39 @@
     </header>
 
     <main class="container my-5">
-        <div class="text-center mb-4">
-            <a href="#" class="portada">
+        <div class="text-center mb-5">
+            <a href="#" class="destacar">
                 <img src="../Portada/Recursos/Imagenes/Inicio_Web.png" class="img-fluid rounded shadow-lg" alt="Imagen destacada: Lo último en tecnología automovilística">
             </a>
         </div>
-        <div class="container my-5">
-            <a href="#" class="portada text-white">
-                <div class="bg-dark rounded py-4 px-3">
-                    <h1 class="mb-4 text-center">BIENVENIDOS A TUNEO TOTAL</h1>
-                    <p class="mb-4">
-                        En <span class="fw-bold">Tuneo Total</span> vivimos por y para el mundo del motor. Desde 2024, nos hemos consolidado como el referente en información automovilística en español, ofreciendo cobertura exclusiva de competiciones internacionales, análisis técnicos profundos y las últimas novedades de la industria. Nuestro compromiso es acercarte al apasionante universo del automovilismo, ya seas un fanático de las carreras, un amante de los coches clásicos o un entusiasta de la tecnología de vanguardia. Con una comunidad en constante crecimiento, trabajamos para brindarte contenido de calidad, entrevistas exclusivas con expertos y acceso a eventos únicos que celebran la pasión por los motores. Únete a nosotros y descubre todo lo que el mundo del motor tiene para ofrecer.
-                    </p>
-                    <p class="mb-4">
-                        Nuestro equipo de expertos, formado por ingenieros, pilotos y periodistas especializados, te trae contenido de calidad sobre:
-                    </p>
-                    <div class="row justify-content-center">
-                        <div class="col-md-8">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-10 col-lg-8">
+                <a href="#" class="destacar text-white">
+                    <div class="bg-dark text-white rounded py-3 py-md-4 px-3 px-md-5 mb-4">
+                        <h1 class="mb-4 text-center">BIENVENIDOS A TUNEO TOTAL</h1>
+                        <p class="mb-4">
+                            En <span class="fw-bold">Tuneo Total</span> vivimos por y para el mundo del motor. Desde 2024, somos un referente en español, ofreciendo las últimas noticias de competiciones y las últimas novedades de la industria. Nuestro
+                            compromiso es acercarte al apasionante universo del automovilismo, ya seas un fanático de las carreras o amante de los coches y sus modificaciones. Con una comunidad en constante crecimiento, trabajamos para brindarte contenido
+                            de calidad, entrevistas exclusivas con expertos y acceso a eventos únicos que celebran la pasión por los motores. Únete a nosotros y descubre todo lo que el mundo del motor ofrece.
+                        </p>
+                        <p class="mb-4">
+                            Nuestro equipo de expertos te trae contenido de calidad sobre:
+                        </p>
+                        <div class="ps-3 ps-md-4 mb-3 mb-md-4">
                             <ul class="text-start">
                                 <li class="mb-2">Competiciones nacionales e internacionales (F1, WRC, Drift, GT, etc.)</li>
                                 <li class="mb-2">Lanzamientos de nuevos modelos y tecnología innovadora</li>
+                                <li class="mb-2">Ideas para modificaciones y venta de piezas</li>
                                 <li class="mb-2">Eventos exclusivos y exposiciones de vehículos</li>
                                 <li class="mb-2">Guías de mantenimiento y consejos para entusiastas</li>
                             </ul>
                         </div>
+                        <p class="mt-4 text-center">
+                            <span class="fst-italic">"No somos simples espectadores, somos parte activa de la comunidad automovilística."</span> - Equipo de Tuneo Total
+                        </p>
                     </div>
-                    <p class="mt-4 text-center">
-                        <span class="fst-italic">"No somos simples espectadores, somos parte activa de la comunidad automovilística."</span> - Equipo de Tuneo Total
-                    </p>
-                </div>
-            </a>
+                </a>
+            </div>
         </div>
     </main>
 
@@ -141,4 +146,5 @@
         </div>
     </footer>
 </body>
+
 </html>
