--- a/Visual Studio Projects/Unidad 7/SerranoRuizMauro/CarruselExposicion/CarruselExposicion1.html
+++ b/Visual Studio Projects/Unidad 7/SerranoRuizMauro/CarruselExposicion/CarruselExposicion1.html
@@ -2,74 +2,141 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Exposición de Vehículos</title>
-    <link rel="stylesheet" type="text/css" href="../HojaDeEstilos.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tuneo Total - Exposición de Vehículos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="../HojaDeEstilo.css">
 </head>
+
 <body>
     <header>
-        <div>
-            <img src="../RecursosGenerales/Imagenes/Banner_Web.png"  alt="banner" />
+        <div class="container-fluid p-0">
+            <img src="../RecursosGenerales/Imagenes/Banner_Web.png" class="img-fluid w-100" alt="Banner Tuneo Total">
         </div>
-        <nav>
-            <li><a href="../Portada/inicio-web.html" target="_self" title="EnlaceMenuHorizontal">Portada</a></li>
-            <li><a href="../Indice/indice.html" target="_self" title="EnlaceMenuHorizontal">Índice</a></li>
-            <li><a href="../Tienda/tienda.html" target="_self" title="EnlaceMenuHorizontal">Tienda</a></li>
-            <li><a href="../CarruselExposicion/CarruselExposicion1.html" target="_self" title="EnlaceMenuHorizontal">Exposición de Vehículos</a></li>            
-            <li><a href="../Blog/Blog.html" target="_self" title="EnlaceMenuHorizontal">Blog</a></li>
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav w-100 justify-content-between text-center">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="../Portada/inicio-web.html">Portada</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="../Tienda/tienda.html">Tienda</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white active" href="../CarruselExposicion/CarruselExposicion1.html">Exposición</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="../Blog/Blog.html">Blog</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
-    
-    <div id="contenidoExposicion">
-        <main>
-            <h1 class="titulo">Galería de Exposición</h1>
-            <div id="carrusel">
-                <div class="flecha"><a href="../CarruselExposicion/CarruselExposicion5.html"><img src="../CarruselExposicion/Recursos/Imagenes/Flecha_Atras.png" alt="Hacia atrás"></a></div> 
-                <div class="imagen">
-                <img src="../CarruselExposicion/Recursos/Imagenes/Coche_1.png" alt="Coche 1">
-                </div>
-                <div class="flecha"><a href="../CarruselExposicion/CarruselExposicion2.html"><img src="../CarruselExposicion/Recursos/Imagenes/Flecha_Alante.png" alt="Hacia alante"></a></div>
-            </div>
-        </main>
-        <aside>
-            <h2>Publicidad</h2>
-            <div class="publicidad">
-                <img src="../RecursosGenerales/Imagenes/Publicidad_1.png" alt="Anuncio Publicitario Nº1">
-            </div>
-            <div class="publicidad">
-                <video src="../RecursosGenerales/Videos/BMW.mp4" controls loop autoplay preload="metadata" poster="../RecursosGenerales/Videos/Portada_Video.png"></video>
-            </div>
-            <div class="publicidad">
-                <img src="../RecursosGenerales/Imagenes/Publicidad_2.png" alt="Anuncio Publicitario Nº2">
-            </div>
-        </aside>
-    </div>
 
-    <footer>
-        <div>
-            <h2>Sobre nosotros</h2>
-            <ul>
-                <li>Conócenos</li>
-                <li>Ayuda</li>
-                <li>Información esencial</li>
-            </ul>
+    <main class="container my-3 my-md-5">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-10 col-lg-8">
+                <h1 class="h1 text-center p-3 mb-4 text-white mx-auto">Galería de Exposición</h1>
+                
+                <div class="bg-dark rounded p-4 mb-4 destacar">
+                    <div id="exposicion" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#exposicion" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#exposicion" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#exposicion" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#exposicion" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                            <button type="button" data-bs-target="#exposicion" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                        </div>
+                        <div class="carousel-inner rounded">
+                            <div class="carousel-item active">
+                                <img src="/CarruselExposicion/Recursos/Imagenes/Coche_1.png" class="d-block w-100" alt="Vehículo 1 de exposición">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/CarruselExposicion/Recursos/Imagenes/Coche_2.png" class="d-block w-100" alt="Vehículo 2 de exposición">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/CarruselExposicion/Recursos/Imagenes/Coche_3.png" class="d-block w-100" alt="Vehículo 3 de exposición">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/CarruselExposicion/Recursos/Imagenes/Coche_4.png" class="d-block w-100" alt="Vehículo 4 de exposición">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="/CarruselExposicion/Recursos/Imagenes/Coche_5.png" class="d-block w-100" alt="Vehículo 5 de exposición">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#exposicion" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Anterior</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#exposicion" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Siguiente</span>
+                        </button>
+                    </div>
+                </div>
+
+                <p class="text-center text-white mt-4">
+                    Fotos de uno de nuestros eventos de exposición de vehículos. En esta galería podrás ver una selección de los coches más impresionantes que han pasado por nuestras instalaciones.*
+                </p>
+            </div>
         </div>
-        <div>
-            <h2>Legal</h2>
-            <ul>
-                <li>Aviso legal</li>
-                <li>Política de privacidad</li>
-                <li>Política de Cookies</li>
-                <li>Condiciones de uso</li>
-            </ul>
-        </div>
-        <div>
-            <h2>Redes sociales</h2>
-            <ul>
-                <li><img src="../RecursosGenerales/Imagenes/Icono_Facebook.png" alt="Facebook"> Facebook</li>
-                <li><img src="../RecursosGenerales/Imagenes/Icono_Instagram.png" alt="Instagram"> Instagram</li>
-                <li><img src="../RecursosGenerales/Imagenes/Icono_Twitter.png" alt="Twitter"> Twitter</li>
-                <li><img src="../RecursosGenerales/Imagenes/Icono_Tiktok.png" alt="Tiktok"> Tiktok</li>
-            </ul>
+    </main>
+
+    <footer class="bg-black text-white py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-4 mb-4 mb-md-0">
+                    <h2 class="h5">Sobre nosotros</h2>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="/Portada/inicio-web.html" class="text-white text-decoration-none">Conócenos</a></li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Nuestro equipo</a></li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Contacto</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-12 col-md-4 mb-4 mb-md-0">
+                    <h2 class="h5">Legal</h2>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Aviso legal</a></li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Política de privacidad</a></li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Política de Cookies</a></li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Condiciones de uso</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-12 col-md-4">
+                    <h2 class="h5">Redes Sociales</h2>
+                    <ul class="list-unstyled">
+                        <li class="mb-2">
+                            <a href="#" class="text-white text-decoration-none d-flex align-items-center">
+                                <img src="../RecursosGenerales/Imagenes/Icono_Facebook.png" alt="Facebook" class="me-2" width="20"> Facebook
+                            </a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#" class="text-white text-decoration-none d-flex align-items-center">
+                                <img src="../RecursosGenerales/Imagenes/Icono_Instagram.png" alt="Instagram" class="me-2" width="20"> Instagram
+                            </a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#" class="text-white text-decoration-none d-flex align-items-center">
+                                <img src="../RecursosGenerales/Imagenes/Icono_Twitter.png" alt="Twitter" class="me-2" width="20"> Twitter
+                            </a>
+                        </li>
+                        <li class="mb-2">
+                            <a href="#" class="text-white text-decoration-none d-flex align-items-center">
+                                <img src="../RecursosGenerales/Imagenes/Icono_Tiktok.png" alt="TikTok" class="me-2" width="20"> TikTok
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
