--- a/Visual Studio Projects/Unidad 7/SerranoRuizMauro/CarruselExposicion/CarruselExposicion1.html
+++ b/Visual Studio Projects/Unidad 7/SerranoRuizMauro/CarruselExposicion/CarruselExposicion1.html
@@ -12,27 +12,27 @@
 <body>
     <header>
         <div class="container-fluid p-0">
-            <img src="../RecursosGenerales/Imagenes/Banner_Web.png" class="img-fluid w-100" alt="Banner Tuneo Total">
+            <img src="../RecursosGenerales/Imagenes/Banner_Web.png" class="img-fluid w-100" alt="Banner Automotor Passion - Competición y tecnología automovilística">
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav w-100 justify-content-between text-center">
+                    <ul class="navbar-nav w-100 justify-content-between">
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="../Portada/inicio-web.html">Portada</a>
+                            <a class="nav-link text-white" href="../Portada/inicio-web.html" target="_self" title="Página principal de Automotor Passion">Portada</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="../Tienda/tienda.html">Tienda</a>
+                            <a class="nav-link text-white" href="../Tienda/tienda.html" target="_self" title="Tienda oficial de productos automovilísticos">Tienda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white active" href="../CarruselExposicion/CarruselExposicion1.html">Exposición</a>
+                            <a class="nav-link text-white" href="../CarruselExposicion/CarruselExposicion1.html" target="_self" title="Exposición de vehículos clásicos y modernos">Exposición de Vehículos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="../Blog/Blog.html">Blog</a>
+                            <a class="nav-link text-white" href="../Blog/Blog.html" target="_self" title="Blog especializado en automoción">Blog</a>
                         </li>
                     </ul>
                 </div>
@@ -41,11 +41,11 @@
     </header>
 
     <main class="container my-3 my-md-5">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center mx-auto">
             <div class="col-12 col-md-10 col-lg-8">
                 <h1 class="h1 text-center p-3 mb-4 text-white mx-auto">Galería de Exposición</h1>
                 
-                <div class="bg-dark rounded p-4 mb-4 destacar">
+                <div class="bg-dark rounded p-4 mb-4">
                     <div id="exposicion" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#exposicion" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -56,19 +56,19 @@
                         </div>
                         <div class="carousel-inner rounded">
                             <div class="carousel-item active">
-                                <img src="/CarruselExposicion/Recursos/Imagenes/Coche_1.png" class="d-block w-100" alt="Vehículo 1 de exposición">
+                                <img src="../CarruselExposicion/Recursos/Imagenes/Coche_1.png" class="d-block w-100" alt="Vehículo 1 de exposición">
                             </div>
                             <div class="carousel-item">
-                                <img src="/CarruselExposicion/Recursos/Imagenes/Coche_2.png" class="d-block w-100" alt="Vehículo 2 de exposición">
+                                <img src="../CarruselExposicion/Recursos/Imagenes/Coche_2.png" class="d-block w-100" alt="Vehículo 2 de exposición">
                             </div>
                             <div class="carousel-item">
-                                <img src="/CarruselExposicion/Recursos/Imagenes/Coche_3.png" class="d-block w-100" alt="Vehículo 3 de exposición">
+                                <img src="../CarruselExposicion/Recursos/Imagenes/Coche_3.png" class="d-block w-100" alt="Vehículo 3 de exposición">
                             </div>
                             <div class="carousel-item">
-                                <img src="/CarruselExposicion/Recursos/Imagenes/Coche_4.png" class="d-block w-100" alt="Vehículo 4 de exposición">
+                                <img src="../CarruselExposicion/Recursos/Imagenes/Coche_4.png" class="d-block w-100" alt="Vehículo 4 de exposición">
                             </div>
                             <div class="carousel-item">
-                                <img src="/CarruselExposicion/Recursos/Imagenes/Coche_5.png" class="d-block w-100" alt="Vehículo 5 de exposición">
+                                <img src="../CarruselExposicion/Recursos/Imagenes/Coche_5.png" class="d-block w-100" alt="Vehículo 5 de exposición">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#exposicion" data-bs-slide="prev">
@@ -90,7 +90,7 @@
     </main>
 
     <footer class="bg-black text-white py-4">
-        <div class="container">
+        <div class="container space-beetween">
             <div class="row">
                 <div class="col-12 col-md-4 mb-4 mb-md-0">
                     <h2 class="h5">Sobre nosotros</h2>
