--- a/Visual Studio Projects/Unidad 7/SerranoRuizMauro/Portada/inicio-web.html
+++ b/Visual Studio Projects/Unidad 7/SerranoRuizMauro/Portada/inicio-web.html
@@ -9,22 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="../HojaDeEstilo.css">
-    <style>
-        .hero-card {
-            background-color: rgba(0, 0, 0, 0.7);
-            border: none;
-            border-radius: 10px;
-        }
-        .hero-title {
-            font-size: 2.5rem;
-            font-weight: 700;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-        }
-        .hero-text {
-            font-size: 1.2rem;
-            line-height: 1.6;
-        }
-    </style>
 </head>
 
 <body>
@@ -34,7 +18,7 @@
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-            <div class="container-fluid">
+            <div class="container">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -98,8 +82,8 @@
     <footer class="bg-black text-white py-4">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 mb-4 mb-md-0">
-                    <h2 class="h4">Sobre nosotros</h2>
+                <div class="col-md-3 mb-4 mb-md-0">
+                    <h4 class="h4">Sobre nosotros</h4>
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="/Portada/inicio-web.html" class="text-white text-decoration-none">Conócenos</a></li>
                         <li class="mb-2"><a href="#" class="text-white text-decoration-none">Nuestro equipo</a></li>
@@ -107,8 +91,8 @@
                     </ul>
                 </div>
 
-                <div class="col-md-4 mb-4 mb-md-0">
-                    <h2 class="h4">Legal</h2>
+                <div class="col-md-3 mb-4 mb-md-0">
+                    <h4 class="h4">Legal</h4>
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="#" class="text-white text-decoration-none">Aviso legal</a></li>
                         <li class="mb-2"><a href="#" class="text-white text-decoration-none">Política de privacidad</a></li>
@@ -117,8 +101,8 @@
                     </ul>
                 </div>
 
-                <div class="col-md-4">
-                    <h2 class="h4">Redes Sociales</h2>
+                <div class="col-md-3 mb-4 mb-md-0">
+                    <h4 class="h4">Redes Sociales</h4>
                     <ul class="list-unstyled">
                         <li class="mb-2">
                             <a href="#" class="text-white text-decoration-none">
