Completado en un 85% la pagina, a falta de las correcions que aparecen en el documento

--- a/Visual Studio Projects/Unidad 7/SerranoRuizMauro/Portada/Portada.html
+++ b/Visual Studio Projects/Unidad 7/SerranoRuizMauro/Portada/Portada.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tuneo Total - Web Oficial</title>
-    <meta name="description" content="El portal definitivo para apasionados del motor. Noticias, exposiciones, competiciones y análisis técnico del mundo automovilístico.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="../HojaDeEstilo.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -25,16 +25,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav w-100 justify-content-between">
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="../Portada/inicio-web.html" target="_self" title="Página principal de Automotor Passion">Portada</a>
+                            <a class="nav-link text-white" href="../Portada/Portada.html" target="_self" title="Página principal de Tuneo Total">Portada</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="../Tienda/tienda.html" target="_self" title="Tienda oficial de productos automovilísticos">Tienda</a>
+                            <a class="nav-link text-white" href="../Tienda/Tienda.html" target="_self" title="Tienda oficial de Tuneo Total">Tienda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="../CarruselExposicion/CarruselExposicion1.html" target="_self" title="Exposición de vehículos clásicos y modernos">Exposición de Vehículos</a>
+                            <a class="nav-link text-white" href="../CarruselExposicion/CarruselExposicion.html" target="_self" title="Exposición de vehículos de Tuneo Total">Exposición de Vehículos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="../Blog/Blog.html" target="_self" title="Blog especializado en automoción">Blog</a>
+                            <a class="nav-link text-white" href="../Blog/Blog.html" target="_self" title="Blog de Tuneo Total">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#" title="Carrito de Tuneo Total"><i class="bi bi-cart"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -52,7 +55,7 @@
             <div class="col-12 col-md-10 col-lg-8">
                 <a href="#" class="destacar text-white">
                     <div class="bg-dark text-white rounded py-3 py-md-4 px-3 px-md-5 mb-4">
-                        <h1 class="mb-4 text-center">BIENVENIDOS A TUNEO TOTAL</h1>
+                        <h1 class="mb-4 text-center fw-bold">BIENVENIDOS A TUNEO TOTAL</h1>
                         <p class="mb-4">
                             En <span class="fw-bold">Tuneo Total</span> vivimos por y para el mundo del motor. Desde 2024, somos un referente en español, ofreciendo las últimas noticias de competiciones y las últimas novedades de la industria. Nuestro
                             compromiso es acercarte al apasionante universo del automovilismo, ya seas un fanático de las carreras o amante de los coches y sus modificaciones. Con una comunidad en constante crecimiento, trabajamos para brindarte contenido
@@ -82,7 +85,7 @@
     <footer class="bg-black text-white py-4">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 mb-4 mb-md-0">
+                <div class="col-lg-4 mb-4 col-md-12">
                     <h4 class="h4">Sobre nosotros</h4>
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="/Portada/inicio-web.html" class="text-white text-decoration-none">Conócenos</a></li>
@@ -91,7 +94,7 @@
                     </ul>
                 </div>
 
-                <div class="col-md-3 mb-4 mb-md-0">
+                <div class="col-lg-4 mb-4 col-md-12">
                     <h4 class="h4">Legal</h4>
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="#" class="text-white text-decoration-none">Aviso legal</a></li>
@@ -101,7 +104,7 @@
                     </ul>
                 </div>
 
-                <div class="col-md-3 mb-4 mb-md-0">
+                <div class="col-lg-4 mb-4 col-md-12">
                     <h4 class="h4">Redes Sociales</h4>
                     <ul class="list-unstyled">
                         <li class="mb-2">
