--- a/Visual Studio Projects/Unidad 7/SerranoRuizMauro/CarruselExposicion/CarruselExposicion.html
+++ b/Visual Studio Projects/Unidad 7/SerranoRuizMauro/CarruselExposicion/CarruselExposicion.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="../HojaDeEstilo.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -23,16 +24,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav w-100 justify-content-between">
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="../Portada/inicio-web.html" target="_self" title="Página principal de Automotor Passion">Portada</a>
+                            <a class="nav-link text-white" href="../Portada/Portada.html" target="_self" title="Página principal de Tuneo Total">Portada</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="../Tienda/tienda.html" target="_self" title="Tienda oficial de productos automovilísticos">Tienda</a>
+                            <a class="nav-link text-white" href="../Tienda/Tienda.html" target="_self" title="Tienda oficial de Tuneo Total">Tienda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="../CarruselExposicion/CarruselExposicion1.html" target="_self" title="Exposición de vehículos clásicos y modernos">Exposición de Vehículos</a>
+                            <a class="nav-link text-white" href="../CarruselExposicion/CarruselExposicion.html" target="_self" title="Exposición de vehículos de Tuneo Total">Exposición de Vehículos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="../Blog/Blog.html" target="_self" title="Blog especializado en automoción">Blog</a>
+                            <a class="nav-link text-white" href="../Blog/Blog.html" target="_self" title="Blog de Tuneo Total">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#" title="Carrito de Tuneo Total"><i class="bi bi-cart"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -43,7 +47,7 @@
     <main class="container my-3 my-md-5">
         <div class="row justify-content-center mx-auto">
             <div class="col-12 col-md-10 col-lg-8">
-                <h1 class="h1 text-center p-3 mb-4 text-white mx-auto">Galería de Exposición</h1>
+                <h1 class="h1 text-center p-3 mb-4 text-white mx-auto fw-bold">Galería de Exposición</h1>
                 
                 <div class="bg-dark rounded p-4 mb-4">
                     <div id="exposicion" class="carousel slide" data-bs-ride="carousel">
