Practicamente la pagina web esta terminada, debe revisarse luego

--- a/Visual Studio Projects/Unidad 7/SerranoRuizMauro/CarruselExposicion/CarruselExposicion.html
+++ b/Visual Studio Projects/Unidad 7/SerranoRuizMauro/CarruselExposicion/CarruselExposicion.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,6 +37,12 @@
                             <a class="nav-link text-white" href="../Blog/Blog.html" target="_self" title="Blog de Tuneo Total">Blog</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-white" href="../InicioSesion/InicioSesion.html" target="_self" title="Inicio de sesion">Iniciar Sesión</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="../InscribirseEvento/InscribirseEvento.html" target="_self" title="Inscripción a los eventos Tuneo Total">Inscribirse</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-white" href="#" title="Carrito de Tuneo Total"><i class="bi bi-cart"></i></a>
                         </li>
                     </ul>
@@ -48,7 +55,7 @@
         <div class="row justify-content-center mx-auto">
             <div class="col-12 col-md-10 col-lg-8">
                 <h1 class="h1 text-center p-3 mb-4 text-white mx-auto fw-bold">Galería de Exposición</h1>
-                
+
                 <div class="bg-dark rounded p-4 mb-4">
                     <div id="exposicion" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
@@ -144,4 +151,5 @@
         </div>
     </footer>
 </body>
+
 </html>
