--- a/Visual Studio Projects/Unidad 7/SerranoRuizMauro/Portada/Portada.html
+++ b/Visual Studio Projects/Unidad 7/SerranoRuizMauro/Portada/Portada.html
@@ -37,6 +37,12 @@
                             <a class="nav-link text-white" href="../Blog/Blog.html" target="_self" title="Blog de Tuneo Total">Blog</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-white" href="../InicioSesion/InicioSesion.html" target="_self" title="Inicio de sesion">Iniciar Sesión</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="../InscribirseEvento/InscribirseEvento.html" target="_self" title="Inscripción a los eventos Tuneo Total">Inscribirse</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-white" href="#" title="Carrito de Tuneo Total"><i class="bi bi-cart"></i></a>
                         </li>
                     </ul>
