Creado el apartado tienda, falta terminar los detalles de iconos y decoracion

--- a/Visual Studio Projects/ProyectoFinal/PaginaPrincipal.html
+++ b/Visual Studio Projects/ProyectoFinal/PaginaPrincipal.html
@@ -48,7 +48,7 @@
                   </li>
           
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle px-3" href="#" id="dropdownSkateboards" role="button">Skateboards</a>
+                    <a class="nav-link dropdown-toggle px-3" href="/Tienda.html" id="dropdownSkateboards" role="button">Skateboards</a>
                     <div class="dropdown-menu dropdown-menu-light p-3 mt-1 border-white" aria-labelledby="dropdownSkateboards" style="min-width: 400px;">
                       <div class="row">
 
