Corregido algunas cosas y creado los html de aviso legal sin el contenido

--- a/Visual Studio Projects/ProyectoFinal/TerminosCondiciones.html
+++ b/Visual Studio Projects/ProyectoFinal/TerminosCondiciones.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda - Tabla Rota Skate Shop</title>
+    <title>Términos y Condiciones</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../HojaDeEstilo.css">
@@ -95,158 +95,10 @@
     </header>
 
     <main>
-        <section class="container my-5">
-            <div class="row align-items-center">
-                <div class="col-md-6">
-                    <div class="mb-4">
-                        <h2 class="fw-bold border-bottom pb-2">TABLA ROTA - SKATESHOP</h2>
-                        <p class="text-muted">EL MEJOR MATERIAL</p>
-                        <p>¿Estás buscando un nuevo skate o necesitas una nueva tabla o ruedas? En Tabla Rota Skate Shop
-                            encontrarás todo lo que necesitas para patinar. Tanto si eres principiante como pro, tenemos
-                            las mejores marcas y mucha información para
-                            ayudarte en el camino.</p>
-                    </div>
-                </div>
+        <div class="container mt-5 mb-5">
+            <h1 class="border-bottom m-2">TÉRMINOS Y CONDICIONES</h1>
 
-                <div class="col-md-6">
-                    <img src="/Recursos/ImagenTienda.jpg" class="img-fluid rounded" alt="Tienda de skate">
-                </div>
-            </div>
-
-            <div class="d-flex flex-wrap justify-content-center mt-5 gap-4">
-
-                <div class="text-center m-2">
-                    <button class="btn btn-outline-dark rounded-circle p-4 border-2">
-
-                    </button>
-                    <small class="d-block mt-2">Tablas</small>
-                </div>
-
-                <div class="text-center m-2">
-                    <button class="btn btn-outline-dark rounded-circle p-4 border-2">
-
-                    </button>
-                    <small class="d-block mt-2">Ejes</small>
-                </div>
-
-                <div class="text-center m-2">
-                    <button class="btn btn-outline-dark rounded-circle p-4 border-2">
-
-                    </button>
-                    <small class="d-block mt-2">Ruedas</small>
-                </div>
-
-                <div class="text-center m-2">
-                    <button class="btn btn-outline-dark rounded-circle p-4 border-2">
-
-                    </button>
-                    <small class="d-block mt-2">Rodamientos</small>
-                </div>
-
-                <div class="text-center m-2">
-                    <button class="btn btn-outline-dark rounded-circle p-4 border-2">
-
-                    </button>
-                    <small class="d-block mt-2">Tornillos</small>
-                </div>
-
-                <div class="text-center m-2">
-                    <button class="btn btn-outline-dark rounded-circle p-4 border-2">
-
-                    </button>
-                    <small class="d-block mt-2">Lija</small>
-                </div>
-
-                <div class="text-center m-2">
-                    <button class="btn btn-outline-dark rounded-circle p-4 border-2">
-
-                    </button>
-                    <small class="d-block mt-2">Completos</small>
-                </div>
-
-            </div>
-        </section>
-
-
-        <section class="container my-5">
-            <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1 class="fw-bold">x RESULTADOS</h1>
-                <div>
-                    <select class="form-select" aria-label="Filtrar productos">
-                        <option selected>Filtrar</option>
-                        <option value="1">Precio: Menor a mayor</option>
-                        <option value="2">Precio: Mayor a menor</option>
-                        <option value="3">Nombre: A-Z</option>
-                        <option value="4">Nombre: Z-A</option>
-                        <option value="5">Más recientes</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="row g-4">
-                <div class="col-md-4">
-                    <div class="card h-100 shadow-sm">
-                        <img src="/Recursos/Producto1.jpg" class="card-img-top" alt="Producto 1">
-                        <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">Tabla Skate Element</h5>
-                            <p class="card-text">Tabla profesional 8.25'' ideal para street y parque.</p>
-                            <div class="mt-auto d-flex justify-content-between">
-                                <button class="btn btn-outline-dark btn-sm">
-                                    <i class="bi bi-pencil"></i> Modificar
-                                </button>
-                                <button class="btn btn-outline-danger btn-sm">
-                                    <i class="bi bi-x"></i> Eliminar
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="card h-100 shadow-sm">
-                        <img src="/Recursos/Producto2.jpg" class="card-img-top" alt="Producto 2">
-                        <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">Ruedas Spitfire 54mm</h5>
-                            <p class="card-text">Set de 4 ruedas Spitfire Formula Four para máxima velocidad y control.
-                            </p>
-                            <div class="mt-auto d-flex justify-content-between">
-                                <button class="btn btn-outline-dark btn-sm">
-                                    <i class="bi bi-pencil"></i> Modificar
-                                </button>
-                                <button class="btn btn-outline-danger btn-sm">
-                                    <i class="bi bi-x"></i> Eliminar
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="card h-100 shadow-sm">
-                        <img src="/Recursos/Producto3.jpg" class="card-img-top" alt="Producto 3">
-                        <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">Rodamientos Bones Reds</h5>
-                            <p class="card-text">Rodamientos de alta precisión y resistencia para todo tipo de
-                                skateboarding.</p>
-                            <div class="mt-auto d-flex justify-content-between">
-                                <button class="btn btn-outline-dark btn-sm">
-                                    <i class="bi bi-pencil"></i> Modificar
-                                </button>
-                                <button class="btn btn-outline-danger btn-sm">
-                                    <i class="bi bi-x"></i> Eliminar
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="text-center mt-5">
-                <a href="#" class="btn btn-dark btn-lg">
-                    <i class="bi bi-plus-lg"></i> Añadir nuevo producto
-                </a>
-            </div>
-        </section>
+        </div>
     </main>
 
     <footer class="mt-5 border-top">
@@ -318,7 +170,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
