--- a/Visual Studio Projects/ProyectoFinal/ModificarProducto.html
+++ b/Visual Studio Projects/ProyectoFinal/ModificarProducto.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda - Tabla Rota Skate Shop</title>
+    <title>Modificar Producto - Tabla Rota Skate Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../HojaDeEstilo.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
         .nav-link {
@@ -23,6 +22,19 @@
         .dropdown:hover .dropdown-menu {
             display: block;
             margin-top: 0;
+        }
+
+        .form-section {
+            background-color: #f8f9fa;
+            border-radius: 10px;
+            padding: 2rem;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+        }
+
+        .img-preview {
+            max-width: 200px;
+            max-height: 200px;
+            object-fit: contain;
         }
     </style>
 </head>
@@ -94,159 +106,88 @@
         </nav>
     </header>
 
-    <main>
-        <section class="container my-5">
-            <div class="row align-items-center">
-                <div class="col-md-6">
-                    <div class="mb-4">
-                        <h2 class="fw-bold border-bottom pb-2">TABLA ROTA - SKATESHOP</h2>
-                        <p class="text-muted">EL MEJOR MATERIAL</p>
-                        <p>¿Estás buscando un nuevo skate o necesitas una nueva tabla o ruedas? En Tabla Rota Skate Shop
-                            encontrarás todo lo que necesitas para patinar. Tanto si eres principiante como pro, tenemos
-                            las mejores marcas y mucha información para
-                            ayudarte en el camino.</p>
-                    </div>
+    <main class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div class="d-flex justify-content-between align-items-center mb-4">
+                    <h1 class="fw-bold">Modificar Producto</h1>
+                    <a href="tienda.html" class="btn btn-outline-secondary">
+                        <i class="bi bi-arrow-left"></i> Volver a la tienda
+                    </a>
                 </div>
 
-                <div class="col-md-6">
-                    <img src="/Recursos/ImagenTienda.jpg" class="img-fluid rounded" alt="Tienda de skate">
-                </div>
-            </div>
+                <div class="form-section mb-5">
+                    <form>
+                        <div class="row mb-4">
+                            <div class="col-md-12">
+                                <div class="mb-3">
+                                    <label for="productName" class="form-label fw-bold">Nombre del Producto</label>
+                                    <input type="text" class="form-control" id="productName"
+                                        value="Tabla Skate Element">
+                                </div>
 
-            <div class="d-flex flex-wrap justify-content-center mt-5 gap-4">
+                                <div class="mb-3">
+                                    <label for="productPrice" class="form-label fw-bold">Precio (€)</label>
+                                    <input type="number" step="0.01" class="form-control" id="productPrice"
+                                        value="59.99">
+                                </div>
 
-                <div class="text-center m-2">
-                    <button class="btn btn-outline-dark rounded-circle p-4 border-2">
+                                <div class="mb-3">
+                                    <label for="productCategory" class="form-label fw-bold">Categoría</label>
+                                    <select class="form-select" id="productCategory">
+                                        <option selected>Tablas</option>
+                                        <option>Ejes</option>
+                                        <option>Ruedas</option>
+                                        <option>Rodamientos</option>
+                                        <option>Tornillos</option>
+                                        <option>Lijas</option>
+                                        <option>Skateboards completos</option>
+                                        <option>Cruiser</option>
+                                        <option>Longboards</option>
+                                    </select>
+                                </div>
 
-                    </button>
-                    <small class="d-block mt-2">Tablas</small>
-                </div>
+                                <div class="mb-3">
+                                    <label for="productBrand" class="form-label fw-bold">Marca</label>
+                                    <input type="text" class="form-control" id="productBrand" value="Element">
+                                </div>
 
-                <div class="text-center m-2">
-                    <button class="btn btn-outline-dark rounded-circle p-4 border-2">
+                                <div class="mb-3">
+                                    <label for="productStock" class="form-label fw-bold">Stock disponible</label>
+                                    <input type="number" class="form-control" id="productStock" value="15">
+                                </div>
 
-                    </button>
-                    <small class="d-block mt-2">Ejes</small>
-                </div>
-
-                <div class="text-center m-2">
-                    <button class="btn btn-outline-dark rounded-circle p-4 border-2">
-
-                    </button>
-                    <small class="d-block mt-2">Ruedas</small>
-                </div>
-
-                <div class="text-center m-2">
-                    <button class="btn btn-outline-dark rounded-circle p-4 border-2">
-
-                    </button>
-                    <small class="d-block mt-2">Rodamientos</small>
-                </div>
-
-                <div class="text-center m-2">
-                    <button class="btn btn-outline-dark rounded-circle p-4 border-2">
-
-                    </button>
-                    <small class="d-block mt-2">Tornillos</small>
-                </div>
-
-                <div class="text-center m-2">
-                    <button class="btn btn-outline-dark rounded-circle p-4 border-2">
-
-                    </button>
-                    <small class="d-block mt-2">Lija</small>
-                </div>
-
-                <div class="text-center m-2">
-                    <button class="btn btn-outline-dark rounded-circle p-4 border-2">
-
-                    </button>
-                    <small class="d-block mt-2">Completos</small>
-                </div>
-
-            </div>
-        </section>
-
-
-        <section class="container my-5">
-            <div class="d-flex justify-content-between align-items-center mb-4">
-                <h1 class="fw-bold">x RESULTADOS</h1>
-                <div>
-                    <select class="form-select" aria-label="Filtrar productos">
-                        <option selected>Filtrar</option>
-                        <option value="1">Precio: Menor a mayor</option>
-                        <option value="2">Precio: Mayor a menor</option>
-                        <option value="3">Nombre: A-Z</option>
-                        <option value="4">Nombre: Z-A</option>
-                        <option value="5">Más recientes</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="row g-4">
-                <div class="col-md-4">
-                    <div class="card h-100 shadow-sm">
-                        <img src="/Recursos/Producto1.jpg" class="card-img-top" alt="Producto 1">
-                        <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">Tabla Skate Element</h5>
-                            <p class="card-text">Tabla profesional 8.25'' ideal para street y parque.</p>
-                            <div class="mt-auto d-flex justify-content-between">
-                                <button class="btn btn-outline-dark btn-sm">
-                                    <i class="bi bi-pencil"></i> Modificar
-                                </button>
-                                <button class="btn btn-outline-danger btn-sm">
-                                    <i class="bi bi-x"></i> Eliminar
-                                </button>
+                                <div class="mb-3">
+                                    <label for="productImage" class="form-label fw-bold">Imagen del Producto</label>
+                                    <input class="form-control" type="url" id="productImage">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
 
-                <div class="col-md-4">
-                    <div class="card h-100 shadow-sm">
-                        <img src="/Recursos/Producto2.jpg" class="card-img-top" alt="Producto 2">
-                        <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">Ruedas Spitfire 54mm</h5>
-                            <p class="card-text">Set de 4 ruedas Spitfire Formula Four para máxima velocidad y control.
-                            </p>
-                            <div class="mt-auto d-flex justify-content-between">
-                                <button class="btn btn-outline-dark btn-sm">
-                                    <i class="bi bi-pencil"></i> Modificar
-                                </button>
-                                <button class="btn btn-outline-danger btn-sm">
-                                    <i class="bi bi-x"></i> Eliminar
-                                </button>
-                            </div>
+                        <div class="mb-4">
+                            <label for="productDescription" class="form-label fw-bold">Descripción</label>
+                            <textarea class="form-control" id="productDescription"
+                                rows="4">Tabla profesional 8.25'' ideal para street y parque. Fabricada con madera de arce canadiense de 7 capas para máxima durabilidad y pop.</textarea>
                         </div>
-                    </div>
-                </div>
 
-                <div class="col-md-4">
-                    <div class="card h-100 shadow-sm">
-                        <img src="/Recursos/Producto3.jpg" class="card-img-top" alt="Producto 3">
-                        <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">Rodamientos Bones Reds</h5>
-                            <p class="card-text">Rodamientos de alta precisión y resistencia para todo tipo de
-                                skateboarding.</p>
-                            <div class="mt-auto d-flex justify-content-between">
-                                <button class="btn btn-outline-dark btn-sm">
-                                    <i class="bi bi-pencil"></i> Modificar
-                                </button>
-                                <button class="btn btn-outline-danger btn-sm">
-                                    <i class="bi bi-x"></i> Eliminar
-                                </button>
-                            </div>
+                        <div class="form-check form-switch mb-4">
+                            <input class="form-check-input" type="checkbox" id="productActive" checked>
+                            <label class="form-check-label" for="productActive">Producto activo (visible en la
+                                tienda)</label>
                         </div>
-                    </div>
+
+                        <div class="d-flex justify-content-end gap-3">
+                            <button type="button" class="btn btn-outline-danger">
+                                <i class="bi bi-trash"></i> Eliminar Producto
+                            </button>
+                            <button type="submit" class="btn btn-dark">
+                                <i class="bi bi-check-lg"></i> Guardar Cambios
+                            </button>
+                        </div>
+                    </form>
                 </div>
             </div>
-
-            <div class="text-center mt-5">
-                <a href="#" class="btn btn-dark btn-lg">
-                    <i class="bi bi-plus-lg"></i> Añadir nuevo producto
-                </a>
-            </div>
-        </section>
+        </div>
     </main>
 
     <footer class="mt-5 border-top">
@@ -318,7 +259,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
