--- a/Visual Studio Projects/ProyectoFinal/Contacto.html
+++ b/Visual Studio Projects/ProyectoFinal/Contacto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Términos y Condiciones</title>
+    <title>Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../HojaDeEstilo.css">
@@ -23,6 +23,22 @@
         .dropdown:hover .dropdown-menu {
             display: block;
             margin-top: 0;
+        }
+
+        .form-control:focus {
+            box-shadow: none;
+            border-color: #000;
+        }
+
+        .btn-enviar {
+            background-color: #1aaf9c;
+            color: white;
+            font-weight: bold;
+            width: 100%;
+        }
+
+        .btn-enviar:hover {
+            background-color: #159b8a;
         }
     </style>
 </head>
@@ -91,16 +107,80 @@
                 </form>
                 <a class="nav-link m-2" href="/Carrito.html" title="Carrito de compras"><i class="bi bi-cart"></i></a>
             </div>
-            <div class="col-6 col-md-auto mb-2 border-start border-dark-subtle ps-3">
-                <a href="/Contacto.html" class="text-decoration-none text-dark"><i class="bi bi-globe"></i>
-                    <span class="ms-1 fw-semibold">Redes</span></a>
-            </div>
         </nav>
     </header>
 
     <main>
         <div class="container mt-5 mb-5">
-            <h1 class="border-bottom m-2">TÉRMINOS Y CONDICIONES</h1>
+            <h1 class="border-bottom m-2">CONTACTO & ATENCIÓN AL CLIENTE</h1>
+            <div class="row justify-content-center mt-5">
+                <div class="col-lg-12">
+                    <div class="row mb-3">
+                        <div class="col-lg-6 col-sm-12">
+                            <h1 class="justify-content-start border-bottom"><i class="bi bi-envelope m-2"></i>E-MAIL
+                            </h1>
+                            <h3 class="mt-3 mb-5 h3">service@tablarota.es</h3>
+                            <p class="mt-5 text-center border-top">Contestamos en un plazo máximo de 24 horas.</p>
+                            <p class="mt-4 mb-2 text-center fw-bold">También puedes consultar nuestro apartado de
+                                preguntas frecuentes:</p>
+                            <button class="btn btn-outline-dark mb-5 d-flex mx-auto">
+                                <i class="bi bi-question-circle ms-2 mx-2"></i>Preguntas Frecuentes
+                            </button>
+
+                        </div>
+                        <div class="col-lg-6 col-sm-12">
+                            <h1 class="justify-content-start border-bottom"><i></i>ATENCIÓN AL CLIENTE</h1>
+                            <h3 class="h3 mt-3">748374084</h3>
+                            <p class="mt-5 mb-5 border-top">Horario: <br /> Lunes a vieres: 10:00 a 14:00 <br /> Excepto
+                                días festivos</p>
+                        </div>
+                    </div>
+                    <div>
+                        <h1 class="justify-content-start border-bottom">CONTACTO</h1>
+                        <form class="mt-5 mb-5 " action="" method="">
+                            <div class="row">
+                                <div class="col-lg-6 col-sm-12">
+                                    <div class="d-flex mb-4">
+                                        <div class="form-icon"><i class="bi bi-person-fill d-flex m-2"></i></div>
+                                        <input type="text" class="form-control" placeholder="Tu nombre *" required>
+                                    </div>
+                                    <div class="d-flex mb-4">
+                                        <div class="form-icon"><i class="bi bi-envelope-fill d-flex m-2"></i></div>
+                                        <input type="email" class="form-control"
+                                            placeholder="Tu dirección de correo electrónico *" required>
+                                    </div>
+                                    <div class="d-flex mb-4">
+                                        <div class="form-icon"><i class="bi bi-telephone-fill d-flex m-2"></i></div>
+                                        <div class="input-group">
+                                            <span class="input-group-text">ES +34</span>
+                                            <input type="tel" class="form-control" placeholder="móvil">
+                                        </div>
+                                    </div>
+                                    <div class="d-flex mb-4">
+                                        <div class="form-icon"><i class="bi bi-globe-asia-australia d-flex m-2"></i></div>
+                                        <select class="form-select">
+                                            <option selected>Consulta general</option>
+                                            <option value="">¿Qué pasa con mi pedido?</option>
+                                            <option value="">Preguntas sobre el pedido</option>
+                                            <option value="">Devolución y reembolso</option>
+                                            <option value="">Pregunta sobre un producto</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-sm-12">
+                                    <div class="mb-3">
+                                        <label for="mensaje" class="form-label">Tu mensaje</label>
+                                        <textarea class="form-control" id="mensaje" rows="5" required placeholder="Explique su problema *"></textarea>
+                                    </div>
+                                    <button type="submit" class="btn btn-enviar">
+                                        <i class="fas fa-envelope"></i> ENVIAR
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </main>
@@ -110,19 +190,31 @@
         <div class="container py-3 justify-content-center d-flex">
             <div class="row text-center">
                 <div class="col-6 col-md-auto mb-2">
-                    <a href="/EnvioDevolucion.html" class="text-decoration-none text-dark"><i class="bi bi-truck fs-5"></i> <span class="ms-1 fw-semibold">Envío</span></a>
+                    <a href="/EnvioDevolucion.html" class="text-decoration-none text-dark"><i
+                            class="bi bi-truck fs-5"></i> <span class="ms-1 fw-semibold">Envío</span></a>
                 </div>
                 <div class="col-6 col-md-auto mb-2 border-start border-dark-subtle ps-3">
-                    <a href="/EnvioDevolucion.html" class="text-decoration-none text-dark"><i class="bi bi-arrow-counterclockwise fs-5"></i> <span class="ms-1 fw-semibold">Devolución</span></a>
+                    <a href="/EnvioDevolucion.html" class="text-decoration-none text-dark"><i
+                            class="bi bi-arrow-counterclockwise fs-5"></i> <span
+                            class="ms-1 fw-semibold">Devolución</span></a>
                 </div>
                 <div class="col-6 col-md-auto mb-2 border-start border-dark-subtle ps-3">
-                    <a href="/EnvioDevolucion.html" class="text-decoration-none text-dark"><i class="bi bi-arrow-left-right fs-5"></i> <span class="ms-1 fw-semibold">Intercambio</span></a>
+                    <a href="/EnvioDevolucion.html" class="text-decoration-none text-dark"><i
+                            class="bi bi-arrow-left-right fs-5"></i> <span
+                            class="ms-1 fw-semibold">Intercambio</span></a>
                 </div>
                 <div class="col-6 col-md-auto mb-2 border-start border-dark-subtle ps-3">
-                    <a href="/PreguntasFrecuentes.html" class="text-decoration-none text-dark"><i class="bi bi-question-circle fs-5"></i> <span class="ms-1 fw-semibold">FAQ - Preguntas frecuentes</span></a>
+                    <a href="/PreguntasFrecuentes.html" class="text-decoration-none text-dark"><i
+                            class="bi bi-question-circle fs-5"></i> <span class="ms-1 fw-semibold">FAQ - Preguntas
+                            frecuentes</span></a>
                 </div>
                 <div class="col-6 col-md-auto mb-2 border-start border-dark-subtle ps-3">
-                    <a href="/Contacto.html" class="text-decoration-none text-dark"><i class="bi bi-headset fs-5"></i> <span class="ms-1 fw-semibold">Atención al cliente</span></a>
+                    <a href="/Contacto.html" class="text-decoration-none text-dark"><i class="bi bi-headset fs-5"></i>
+                        <span class="ms-1 fw-semibold">Atención al cliente</span></a>
+                </div>
+                <div class="col-6 col-md-auto mb-2 border-start border-dark-subtle ps-3">
+                    <a href="/Contacto.html" class="text-decoration-none text-dark"><i class="bi bi-globe"></i>
+                        <span class="ms-1 fw-semibold">Redes</span></a>
                 </div>
             </div>
         </div>
@@ -147,9 +239,11 @@
                     <div class="col-md-4 mb-3">
                         <h6 class="text-uppercase fw-bold border-bottom pb-2">Ayuda y servicio</h6>
                         <ul class="list-unstyled small">
-                            <li><a href="/EnvioDevolucion.html" class="text-decoration-none text-dark">Envío & Devolución</a>
+                            <li><a href="/EnvioDevolucion.html" class="text-decoration-none text-dark">Envío &
+                                    Devolución</a>
                             </li>
-                            <li><a href="/PreguntasFrecuentes.html" class="text-decoration-none text-dark">FAQ - Preguntas
+                            <li><a href="/PreguntasFrecuentes.html" class="text-decoration-none text-dark">FAQ -
+                                    Preguntas
                                     frecuentes</a>
                             </li>
                             <li><a href="/Contacto.html" class="text-decoration-none text-dark">Contacto</a></li>
