--- a/Visual Studio Projects/ProyectoFinal/PaginaPrincipal.html
+++ b/Visual Studio Projects/ProyectoFinal/PaginaPrincipal.html
@@ -90,7 +90,7 @@
             <div class="container-fluid d-flex justify-content-end">
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Buscar">
-                    <button class="btn btn-outline" type="submit"><i class="bi bi-search"></i></button>
+                    <button class="btn btn-outline-light" type="submit"><i class="bi bi-search"></i></button>
                 </form>
                 <a class="nav-link m-2" href="/Carrito.html" title="Carrito de compras"><i class="bi bi-cart"></i></a>
             </div>
@@ -208,23 +208,19 @@
         <div class="container py-3 justify-content-center d-flex">
             <div class="row text-center">
                 <div class="col-6 col-md-auto mb-2">
-                    <i class="bi bi-truck fs-5"></i> <span class="ms-1 fw-semibold">Envío</span>
+                    <a href="/EnvioDevolucion.html" class="text-decoration-none text-dark"><i class="bi bi-truck fs-5"></i> <span class="ms-1 fw-semibold">Envío</span></a>
                 </div>
                 <div class="col-6 col-md-auto mb-2 border-start border-dark-subtle ps-3">
-                    <i class="bi bi-arrow-counterclockwise fs-5"></i> <span class="ms-1 fw-semibold">Devolución</span>
+                    <a href="/EnvioDevolucion.html" class="text-decoration-none text-dark"><i class="bi bi-arrow-counterclockwise fs-5"></i> <span class="ms-1 fw-semibold">Devolución</span></a>
                 </div>
                 <div class="col-6 col-md-auto mb-2 border-start border-dark-subtle ps-3">
-                    <i class="bi bi-arrow-left-right fs-5"></i> <span class="ms-1 fw-semibold">Intercambio</span>
+                    <a href="/EnvioDevolucion.html" class="text-decoration-none text-dark"><i class="bi bi-arrow-left-right fs-5"></i> <span class="ms-1 fw-semibold">Intercambio</span></a>
                 </div>
                 <div class="col-6 col-md-auto mb-2 border-start border-dark-subtle ps-3">
-                    <i class="bi bi-rulers fs-5"></i> <span class="ms-1 fw-semibold">Tabla de tallas</span>
+                    <a href="/PreguntasFrecuentes.html" class="text-decoration-none text-dark"><i class="bi bi-question-circle fs-5"></i> <span class="ms-1 fw-semibold">FAQ - Preguntas frecuentes</span></a>
                 </div>
                 <div class="col-6 col-md-auto mb-2 border-start border-dark-subtle ps-3">
-                    <i class="bi bi-question-circle fs-5"></i> <span class="ms-1 fw-semibold">FAQ - Preguntas
-                        frecuentes</span>
-                </div>
-                <div class="col-6 col-md-auto mb-2 border-start border-dark-subtle ps-3">
-                    <i class="bi bi-headset fs-5"></i> <span class="ms-1 fw-semibold">Atención al cliente</span>
+                    <a href="/Contacto.html" class="text-decoration-none text-dark"><i class="bi bi-headset fs-5"></i> <span class="ms-1 fw-semibold">Atención al cliente</span></a>
                 </div>
             </div>
         </div>
@@ -249,14 +245,12 @@
                     <div class="col-md-4 mb-3">
                         <h6 class="text-uppercase fw-bold border-bottom pb-2">Ayuda y servicio</h6>
                         <ul class="list-unstyled small">
-                            <li><a href="/EnvioDevolucion" class="text-decoration-none text-dark">Envío & Devolución</a>
+                            <li><a href="/EnvioDevolucion.html" class="text-decoration-none text-dark">Envío & Devolución</a>
                             </li>
-                            <li><a href="/TablaTallas" class="text-decoration-none text-dark">Tabla conversión de
-                                    tallas</a></li>
-                            <li><a href="/PreguntasFrecuentes" class="text-decoration-none text-dark">FAQ - Preguntas
+                            <li><a href="/PreguntasFrecuentes.html" class="text-decoration-none text-dark">FAQ - Preguntas
                                     frecuentes</a>
                             </li>
-                            <li><a href="/Contacto" class="text-decoration-none text-dark">Contacto</a></li>
+                            <li><a href="/Contacto.html" class="text-decoration-none text-dark">Contacto</a></li>
                         </ul>
                     </div>
 
